--- a/Nguyen_Than_Project.ioc
+++ b/Nguyen_Than_Project.ioc
@@ -18,14 +18,13 @@ Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IPNb=4
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
-Mcu.Pin2=PA9
-Mcu.Pin3=PA10
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
 Mcu.Pin4=PA13
 Mcu.Pin5=PA14
 Mcu.Pin6=VP_SYS_VS_Systick
@@ -49,14 +48,26 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Signal=ADCx_IN0
 PA1.Locked=true
 PA1.Signal=GPIO_Output
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
+PA2.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA2.GPIO_Label=SCL
+PA2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA2.GPIO_PuPd=GPIO_PULLUP
+PA2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA2.Locked=true
+PA2.PinState=GPIO_PIN_RESET
+PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA3.GPIO_Label=SDA
+PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA3.GPIO_PuPd=GPIO_PULLUP
+PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA3.Locked=true
+PA3.PinState=GPIO_PIN_RESET
+PA3.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -99,9 +110,6 @@ RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-USART1.BaudRate=9600
-USART1.IPParameters=VirtualMode,BaudRate
-USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
